New audio player for the season index
This new player also comes with a new UI:  there is just 1 set of audio
controls for each recording, and you can click a single 'play' button
next to each recording to load it into the player.

--- a/templates/recording_index.html
+++ b/templates/recording_index.html
@@ -124,8 +124,8 @@
 
 <body>
     <div id="container">
-
-
+    <div id="content">
+    <div id="inner">
         <h2>
             {{recording.title}}
         </h2>
@@ -227,6 +227,8 @@
         </div>
 
 
+    </div>
+    </div>
     </div>
 
     <script>
