--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,27 @@
 
 div#container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+div#container #content {
+    height: 100%;
+    overflow-y: auto;
+}
+
+div#content {
+    padding: 20px;
+}
+
+div#content #inner {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    padding: 20px;
     background-color: aliceblue;
 }
 
