--- a/templates/season_index.html
+++ b/templates/season_index.html
@@ -340,7 +340,7 @@
         <div id="content">
             <div id="inner">
 
-                <h2>Modular Mayhem -- {{ season.title }}</h2>
+                <h2>Modular Mayhem Archive -- {{ season.title }}</h2>
 
                 <p>
                     On this page you'll find all of the recordings and stems for {{ season.title }} of Modular Mayhem!
