Stealing some style from Dexter

--- a/templates/recording_index.html
+++ b/templates/recording_index.html
@@ -12,11 +12,11 @@
         }
 
         table#tracklist tr#track td {
-            border-bottom: 1px dotted darkblue;
+            border-bottom: 1px dotted #231f20;
         }
 
         div#intro {
-            border-bottom: 2px solid darkblue;
+            border-bottom: 2px solid #231f20;
         }
 
         div#tracklist {
