--- a/templates/season_index.html
+++ b/templates/season_index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/all.css" />
     <style>
         #filtercontrol {
-            border-bottom: 2px solid darkblue;
+            border-bottom: 2px solid #231f20;
             padding-bottom: 1em;
         }
 
@@ -17,7 +17,7 @@
         }
 
         table#reclist tr td {
-            border-bottom: 1px dotted darkblue;
+            border-bottom: 1px dotted #231f20;
         }
         
         table#reclist tr.selected td {
