--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,14 @@
+@font-face {
+    /** Copyright 2011 The Maven Pro Project Authors (http://www.vissol.co.uk/mavenpro/), with Reserved Font Name "Maven Pro".  */
+    font-family: "Maven Pro";
+    src: url("webfonts/MavenPro-Medium.woff2") format("woff2");
+    font-style:normal;
+    font-weight: 400;
+}
+
+body {
+    background-color: #ccc7c1;
+}
 
 div#container {
     position: fixed;
@@ -16,13 +27,14 @@ div#container #content {
 
 div#content {
     padding: 20px;
+    font-family: "Maven Pro";
 }
 
 div#content #inner {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    background-color: aliceblue;
+    background-color: #ccc7c1;
 }
 
 div#ipfs {
@@ -38,12 +50,12 @@ div#ipfs .pre {
 
 .tag {
     border-radius: 8px;
-    background-color: lightblue;
+    background-color: #a89fa1;
     padding: 3px 8px 3px 8px;
 }
 
 .tag.filtered {
-    background-color: lightcoral;
+    background-color: #e4abb7;
 }
 
 .tag:before {
