Add link to next-gen vault

--- a/templates/season_index.html
+++ b/templates/season_index.html
@@ -343,6 +343,10 @@
                 <h2>Modular Mayhem Archive -- {{ season.title }}</h2>
 
                 <p>
+                    <strong>Click <a href="https://vault.benderfactory.com/">here</a> for the next gen vault!</strong>
+                </p>
+
+                <p>
                     On this page you'll find all of the recordings and stems for {{ season.title }} of Modular Mayhem!
                     You can preview the stereo mix, or explore and download the individual stems!
                 </p>
